--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,10 @@
+[build]
+  command = "npm run build"
+  publish = "build"
+  functions = "functions"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
